tests/snapshots/stream_response_test__tests__ntest_callback-16.snap
---
source: tests/stream_response_test.rs
expression: "&session.data.stylized_text()"
---
"Hello World---\nHello! How can I assist you today?---\n"

